--- a/build.xml
+++ b/build.xml
@@ -5,6 +5,9 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="ALSD2016-Test">
     <property environment="env"/>
+<property name="dir.buildfile" value="."/>
+<property name="dir.workspace" value="/Users/R.J.Liu/Documents/Project"/>
+<property name="dir.jarfile" value="${dir.buildfile}"/>
     <property name="dist" location="build"/>
     <property name="ECLIPSE_HOME" value="../../../../../Applications/Eclipse.app/Contents/Eclipse/"/>
     <property name="junit.output.dir" value="junit"/>
@@ -43,14 +46,36 @@
         <delete dir="bin"/>
     </target>
     <target depends="clean" name="cleanall"/>
-    
-    <target depends="dist" name="build"/>         
-        <target name="dist" depends="build-subprojects,build-project" description="generate the distribution" >
-        <!-- 創建放置jar檔目錄 -->
-        <mkdir dir="${dist}"/>
-        <!-- 把build目錄內的所有檔案結構打包成jar檔  -->
-        <jar jarfile="${dist}/${ant.project.name}.jar" basedir="bin"/>
-    </target>
+              	
+	<target depends="dist" name="build"/>
+	<target name="dist" depends="build-subprojects,build-project" description="generate the distribution">
+			<!-- 創建放置jar檔目錄 -->
+			<mkdir dir="${dist}"/>
+			<!-- 把build目錄內的所有檔案結構打包成jar檔  -->
+
+		
+		<jar jarfile="${dist}/${ant.project.name}.jar" basedir="bin" filesetmanifest="mergewithoutmain">
+		            <manifest>
+		            	<attribute name="Main-Class" value="ALSD.CucumberTest.Main"/>  
+		            	<attribute name="Class-Path" value="."/>
+		            </manifest>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-core-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-java-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-java8-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-junit-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-jvm-deps-1.0.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-testng-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/gherkin-2.12.2.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/hamcrest-core-1.3.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/junit-4.12.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-html-0.2.3.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/selenium-server-standalone-3.0.1.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="/Applications/Eclipse.app/Contents/Eclipse/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="/Applications/Eclipse.app/Contents/Eclipse/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/java-json.jar"/>
+		        </jar>
+		
+    </target>	
               	
     <target name="build-subprojects"/>
     <target depends="init" name="build-project">
