--- a/build.xml
+++ b/build.xml
@@ -46,17 +46,17 @@
         <delete dir="bin"/>
     </target>
     <target depends="clean" name="cleanall"/>
-              	
+
 	<target depends="dist" name="build"/>
 	<target name="dist" depends="build-subprojects,build-project" description="generate the distribution">
 			<!-- 創建放置jar檔目錄 -->
 			<mkdir dir="${dist}"/>
 			<!-- 把build目錄內的所有檔案結構打包成jar檔  -->
 
-		
+
 		<jar jarfile="${dist}/${ant.project.name}.jar" basedir="bin" filesetmanifest="mergewithoutmain">
 		            <manifest>
-		            	<attribute name="Main-Class" value="ALSD.CucumberTest.Main"/>  
+		            	<attribute name="Main-Class" value="ALSD.CucumberTest.Main"/>
 		            	<attribute name="Class-Path" value="."/>
 		            </manifest>
 <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-core-1.2.5.jar"/>
@@ -74,9 +74,9 @@
 <zipfileset excludes="META-INF/*.SF" src="/Applications/Eclipse.app/Contents/Eclipse/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
 <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/java-json.jar"/>
 		        </jar>
-		
-    </target>	
-              	
+
+    </target>
+
     <target name="build-subprojects"/>
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
@@ -107,6 +107,13 @@
             <jvmarg line="-ea"/>
             <classpath refid="ALSD2016-Test.classpath"/>
         </junit>
+        <fail message="Cucumber failed">
+           <condition>
+               <not>
+                   <equals arg1="${cucumber.exitstatus}" arg2="0"/>
+               </not>
+           </condition>
+       </fail>
     </target>
     <target name="Main">
         <java classname="ALSD.CucumberTest.Main" failonerror="true" fork="yes">
