--- a/build.xml
+++ b/build.xml
@@ -74,6 +74,7 @@
 <zipfileset excludes="META-INF/*.SF" src="/Applications/Eclipse.app/Contents/Eclipse/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
 <zipfileset excludes="META-INF/*.SF" src="/Applications/Eclipse.app/Contents/Eclipse/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
 <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/java-json.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/mail.jar"/>
 		        </jar>
 
     </target>
