--- a/build.xml
+++ b/build.xml
@@ -48,8 +48,8 @@
     </target>
     <target depends="clean" name="cleanall"/>
 
-	<target depends="dist" name="build"/>
-	<target name="dist" depends="build-subprojects,build-project" description="generate the distribution">
+	   <target depends="dist" name="build"/>
+	    <target name="dist" depends="build-subprojects,build-project" description="generate the distribution">
 			<!-- 創建放置jar檔目錄 -->
 			<mkdir dir="${dist}"/>
 			<!-- 把build目錄內的所有檔案結構打包成jar檔  -->
@@ -109,13 +109,15 @@
             <jvmarg line="-ea"/>
             <classpath refid="ALSD2016-Test.classpath"/>
         </junit>
-        <fail message="Cucumber failed">
-           <condition>
-               <not>
-                   <equals arg1="${cucumber.exitstatus}" arg2="0"/>
-               </not>
-           </condition>
-       </fail>
+    </target>
+    <target name="CucumberRunner">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="ALSD.CucumberTest.CucumberRunner" todir="${junit.output.dir}"/>
+            <jvmarg line="-ea"/>
+            <classpath refid="ALSD2016-Test.classpath"/>
+        </junit>
     </target>
     <target name="Main">
         <java classname="ALSD.CucumberTest.Main" failonerror="true" fork="yes">
