--- a/build.xml
+++ b/build.xml
@@ -6,18 +6,12 @@
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="ALSD2016-Test">
     <property environment="env"/>
 <property name="dir.buildfile" value="."/>
-<property name="dir.workspace" value="/Users/R.J.Liu/Documents/Project"/>
 <property name="dir.jarfile" value="${dir.buildfile}"/>
     <property name="dist" location="build"/>
-    <property name="ECLIPSE_HOME" value="../../../../../Applications/Eclipse.app/Contents/Eclipse/"/>
     <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
-    <path id="JUnit 4.libraryclasspath">
-        <pathelement location="${ECLIPSE_HOME}plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
-        <pathelement location="${ECLIPSE_HOME}plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
-    </path>
     <path id="ALSD2016-Test.classpath">
         <pathelement location="bin"/>
         <pathelement location="libs/cucumber-core-1.2.5.jar"/>
@@ -60,21 +54,19 @@
 		            	<attribute name="Main-Class" value="ALSD.CucumberTest.Main"/>
 		            	<attribute name="Class-Path" value="."/>
 		            </manifest>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-core-1.2.5.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-java-1.2.5.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-java8-1.2.5.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-junit-1.2.5.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-jvm-deps-1.0.5.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-testng-1.2.5.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/gherkin-2.12.2.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/hamcrest-core-1.3.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/junit-4.12.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/cucumber-html-0.2.3.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/selenium-server-standalone-3.0.1.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="/Applications/Eclipse.app/Contents/Eclipse/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="/Applications/Eclipse.app/Contents/Eclipse/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/java-json.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/ALSD2016-Test/libs/mail.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/cucumber-core-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/cucumber-java-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/cucumber-java8-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/cucumber-junit-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/cucumber-jvm-deps-1.0.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/cucumber-testng-1.2.5.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/gherkin-2.12.2.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/hamcrest-core-1.3.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/junit-4.12.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/cucumber-html-0.2.3.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/selenium-server-standalone-3.0.1.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/java-json.jar"/>
+<zipfileset excludes="META-INF/*.SF" src="libs/mail.jar"/>
 		        </jar>
 
     </target>
@@ -88,15 +80,7 @@
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
-        <copy todir="${ant.library.dir}">
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </copy>
-        <unzip dest="${ant.library.dir}">
-            <patternset includes="jdtCompilerAdapter.jar"/>
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </unzip>
-    </target>
+              	
     <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
